--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,20 +1,4 @@
-\documentclass{article}
-\usepackage{graphicx} 
-\usepackage{amsmath}
-\usepackage{amssymb} 
-\usepackage{hyperref}
-\usepackage{natbib}
-\usepackage{parskip}
-\bibliographystyle{apalike}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[
-  a4paper,
-  left=25mm,
-  right=25mm,
-  top=25mm,
-  bottom=25mm
-]{geometry}
+\input{package.tex}
 
 \title{Misinformation Spread on Social Media: \\ A Game-Theoretic Approach}   
 \author{Felipe Manzi Cherryl Chico Olsa Berani}
