Refactor code structure: modularize network visualization, add community detection, reorganize files
- Created draw_network module for reusable network visualization
- Added support for community-based and action-based node coloring
- Updated both Facebook and Barabási-Albert networks to use community detection
- Fixed community color mapping to use actual detected communities
- Moved config files to config/ folder
- Moved test scripts to tests/ folder
- Deleted obsolete visualize_network.py (replaced by create_network.py)
- Updated layout consistency (k=0.5) across visualization and simulation
- Updated .gitignore for generated files and virtual environment

--- a/code/Network.ipynb
+++ b/code/Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ab1bc1ba",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "219fb61a",
    "metadata": {},
    "outputs": [
@@ -38,13 +38,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1f705e4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "partition = community.best_partition(G)\n",
     "colors = [partition[node] for node in G.nodes()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6058d2fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of communities: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_communities = len(set(partition.values()))\n",
+    "print(f\"Number of communities: {num_communities}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dfba3d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Community 0: 344 nodes\n",
+      "Community 1: 457 nodes\n",
+      "Community 2: 541 nodes\n",
+      "Community 3: 19 nodes\n",
+      "Community 4: 423 nodes\n",
+      "Community 5: 323 nodes\n",
+      "Community 6: 19 nodes\n",
+      "Community 7: 117 nodes\n",
+      "Community 8: 446 nodes\n",
+      "Community 9: 548 nodes\n",
+      "Community 10: 73 nodes\n",
+      "Community 11: 237 nodes\n",
+      "Community 12: 60 nodes\n",
+      "Community 13: 206 nodes\n",
+      "Community 14: 226 nodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count number of nodes in each community\n",
+    "community_counts = {}\n",
+    "for comm in partition.values():\n",
+    "    if comm in community_counts:\n",
+    "        community_counts[comm] += 1\n",
+    "    else:\n",
+    "        community_counts[comm] = 1\n",
+    "for comm_id, count in sorted(community_counts.items()):\n",
+    "    print(f\"Community {comm_id}: {count} nodes\")\n"
    ]
   },
   {
